--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories {
+        maven { url = "https://branchlock.net/android/" }
+
+    }
+    dependencies {
+        classpath group: 'net.branchlock',
+                name: 'obfuscation',
+                version: '1.2.0'
+
+    }
+}
+
+
 plugins {
-    id 'com.android.application' version '8.0.1' apply false
-    id 'com.android.library' version '8.0.1' apply false
+    id 'com.android.application' version '7.4.1' apply false
+    id 'com.android.library' version '7.4.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
 }
